--- a/groupomania/public/index.html
+++ b/groupomania/public/index.html
@@ -6,15 +6,20 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="./favicon.png">
     <title>
-      Groupomania
+      Reseau Social Groupomania
     </title>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <script src="https://kit.fontawesome.com/f991ef61fb.js" crossorigin="anonymous"></script>
+
   </head>
   <body>
-    <noscript>
-      <strong>
-      </strong>
-    </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <script>
+      const app = new Vue({
+        el: "#app"
+      })
+    </script>
+    <!-- code vue js -->
   </body>
+
 </html>
