--- a/groupomania/public/index.html
+++ b/groupomania/public/index.html
@@ -8,16 +8,18 @@
     <title>
       Reseau Social Groupomania
     </title>
-    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <!--<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>-->
     <script src="https://kit.fontawesome.com/f991ef61fb.js" crossorigin="anonymous"></script>
+
 
   </head>
   <body>
     <div id="app"></div>
     <script>
+      /*import Vue from 'vue';
       const app = new Vue({
         el: "#app"
-      })
+      })*/
     </script>
     <!-- code vue js -->
   </body>
