modification css, pb contraste/WCAG

--- a/groupomania/public/index.html
+++ b/groupomania/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="fr">
 
 <head>
     <meta charset="utf-8">
@@ -18,9 +18,9 @@
     <div id="app"></div>
     <script>
         /*import Vue from 'vue';
-                      const app = new Vue({
-                        el: "#app"
-                      })*/
+                              const app = new Vue({
+                                el: "#app"
+                              })*/
     </script>
     <!-- code vue js -->
 </body>
